Update mobile font size index.html

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
         }
 
         .title {
-          font-size: 60px;
+          font-size: 75px !important;
         }
+
 
         .nav {
           font-size: 15px;
