--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         border-radius: var(--radius);
         box-shadow: var(--shadow);
         position: relative;
+        transform: translateY(-30px);
 
         transform-origin: center;
       }
