--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
       <h1 class="title">MELISA ATICI</h1>
 
       <nav class="nav" aria-label="Navigation">
-        <a href="#work">Work</a>
-        <a href="#about">About</a>
-        <a href="#lab">Lab</a>
-        <a href="#contact">Contact</a>
+        <a href="work.html">Work</a>
+        <a href="about.html">About</a>
+        <a href="lab.html">Lab</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </main>
   </body>
