--- a/work.html
+++ b/work.html
@@ -311,7 +311,7 @@
         </div>
 
         <nav class="navline" aria-label="Work lobby navigation">
-          <a href="#article">Article</a>
+          <a href="article.html">Article</a>
           <a href="#app">App</a>
           <a href="#video">Video</a>
           <a href="#website">Website</a>
@@ -321,7 +321,7 @@
       </header>
 
       <main class="grid" aria-label="Work categories">
-        <a class="tile" href="#article">
+        <a class="tile" href="article.html">
           <span class="ink" aria-hidden="true"></span>
           <div class="kicker">
             <span>01</span><span class="arrow">enter →</span>
