--- a/article.html
+++ b/article.html
@@ -266,7 +266,7 @@
 
       <main class="list" aria-label="Articles list">
         <!-- LATEST -->
-        <a id="latest" class="row" href="#">
+        <a id="latest" class="row" href="articles/a0001.html">
           <span class="ink" aria-hidden="true"></span>
 
           <div class="meta">
